# gemini-ocr-mcp

./: .env.example  README.md  gemini-ocr-mcp.py  main.py  pyproject.toml
src/gemini_ocr_mcp/: __init__.py  main.py
