[project]
name = "gemini-ocr-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.24.0",
    "mcp[cli]>=1.10.1",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
]

[project.scripts]
gemini-ocr-mcp = "main:run"

[tool.uv]
package = true
